--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,16 @@
 Package: osvfibo
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Title: Package to calcule Occluded Surface Area 
+Version: 1.0
+Authors@R: c(person("Herson", "Soares", email = "hersonhebert@hotmail.com", role = c("aut", "cre")))
+Description: Beta Package to calcule Occluded Surface between Molecules.
+Depends: R (>= 3.3.0)
+License: GPL-3
 Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
+LazyData: true
 RoxygenNote: 7.2.3
+Imports: 
+    bio3d,
+    dplyr,
+    readr,
+    stringr,
+    tidyr
